# komarm

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
komarm_task/: __init__.py  komarm_env.py
meshes/: base_link.stl  base_mount_v2_1.stl  hand_rotation_v11_4.stl  hand_v15_1.stl  servo_holder2_v2_1.stl  servo_holder_v15_3.stl
robots/: __init__.py
robots/komarm/: komarm.py
robots/komarm/meshes/: arm_bracket_v1_1.stl  arm_bracket_v1_2.stl  base_link.stl  hand_finger_v1_1.stl  hand_unit_v1_1.stl  hand_v1_1.stl  pitch_1_test_v5_1.stl  pitch_2_test_v1_1.stl  roll_1_test_v11_1.stl  roll_2_test_v1_1.stl  servo_holder2_v9_1.stl  servo_holder_v23_3.stl
robots/komarm/urdf/: arm_main.trans  arm_test_main.trans  arm_test_main.xacro  komarm.urdf  materials.xacro  simulation.trans  simulation.xacro
robots/komarm/urdf/komarm/: komarm.usd
robots/komarm/urdf/komarm/configuration/: komarm_physics.usd  komarm_robot.usd  komarm_sensor.usd
robots/trs_so100/urdf/: so_arm100.urdf
script/rsl_rl/: play.py  train.py
scripts/rsl_rl/: play.py  train.py
src/: ppo_train.py
src/isaac_so_arm101/scripts/rsl_rl/: play.py
src/komarm/: ui_extension_example.py
src/komarm/robots/komarm/: komarm.py
src/komarm/robots/komarm/meshes/: base_link.stl  hand_rotation_v13_4.stl
src/komarm/robots/komarm/urdf/: arm_main.xacro  komarm.urdf  materials.xacro
src/komarm/scripts/: list_envs.py  random_agent.py  zero_agent.py
src/komarm/scripts/rsl_rl/: play.py  train.py
src/komarm/tasks/lift/: joint_pos_env_cfg.py  lift_env_cfg.py
src/komarm/tasks/reach/: __init__.py  joint_pos_env_cfg.py  reach_env_cfg.py
src/komarm/tasks/reach/agents/: rsl_rl_ppo_cfg.py
src/outputs/2026-05-15/16-02-48/.hydra/: hydra.yaml
src/outputs/2026-05-15/16-22-18/.hydra/: hydra.yaml
src/outputs/2026-05-15/16-38-58/.hydra/: config.yaml  hydra.yaml
src/outputs/2026-05-15/17-40-25/.hydra/: config.yaml  hydra.yaml
src/outputs/2026-05-15/17-42-39/.hydra/: hydra.yaml
tasks/lift/: __init__.py  joint_pos_env_cfg.py  lift_env_cfg.py
tasks/lift/agents/: rsl_rl_ppo_cfg.py
tasks/lift/mdp/: rewards.py
tasks/reach/: joint_pos_env_cfg.py  reach_env_cfg.py
urdf/: arm_main.trans  arm_main.xacro  komarm.urdf
urdf/komarm/: komarm.usd
urdf/komarm/configuration/: komarm_physics.usd  komarm_robot.usd  komarm_sensor.usd
(+1 files in other folders)
