[project]
name = "komarm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "isaaclab[all,isaacsim]>=2.3.2.post1",
    "omniverse-kit>=107.3.7.285824",
    "pyyaml>=6.0.2",
    "torch==2.7.0",
    "torchvision==0.22.0",
    "xacro>=2.1.1",
]

[project.scripts]
train = "isaac_so_arm101.scripts.rsl_rl.train:main"
play = "isaac_so_arm101.scripts.rsl_rl.play:main"
list_envs = "isaac_so_arm101.scripts.list_envs:main"
zero_agent = "isaac_so_arm101.scripts.zero_agent:main"
random_agent = "isaac_so_arm101.scripts.random_agent:main"

[tool.uv]
extra-index-url = ["https://pypi.nvidia.com"]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[build-system]
requires = ["uv_build>=0.8.21,<0.9.0"]
build-backend = "uv_build"