[project]
name = "komarm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "isaaclab[all,isaacsim]>=2.3.2.post1",
    "omniverse-kit>=107.3.7.285824",
    "pyyaml>=6.0.2",
    "torch==2.7.0",
    "torchvision==0.22.0",
    "xacro>=2.1.1",
]


[tool.uv]
extra-index-url = ["https://pypi.nvidia.com"]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
